<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/fecha"
        android:layout_width="288dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:hint="fecha"
        android:padding="5dp"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/seleccionar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/idSpinnerLab"
        android:layout_marginLeft="180dp"
        android:text="Seleccionar Laboratorio" />

    <TextView
        android:id="@+id/ingreso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:hint="@string/ingreso"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/laboratorio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ingreso"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:hint="@string/laboratorio"
        android:padding="5dp"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/idSpinnerLab"
        android:layout_width="178dp"
        android:layout_height="47dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="120dp"
        android:background="#CCCC"
        tools:ignore="SpeakableTextPresentCheck" />


    <TextView
        android:id="@+id/lab_rut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/laboratorio"
        android:layout_marginStart="20dp"
        android:layout_marginTop="48dp"
        android:hint="@string/trut"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/til_validar"
        android:layout_width="178dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/idSpinnerLab"
        android:layout_marginStart="160dp"
        android:layout_marginTop="30dp"
        android:autofillHints=""
        android:background="#CCCC"
        android:hint="@string/txt_rut"

        android:inputType="text"
        android:padding="8dp"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/lab_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lab_rut"
        android:layout_marginStart="20dp"
        android:layout_marginTop="55dp"
        android:hint="@string/nombre"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/txt_nombre"
        android:layout_width="181dp"
        android:layout_height="48dp"
        android:layout_below="@+id/til_validar"
        android:layout_marginStart="160dp"
        android:layout_marginTop="30dp"
        android:autofillHints=""
        android:background="#CCCC"
        android:hint="@string/txt_nombre"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:textSize="20sp"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/lab_descripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lab_nombre"
        android:layout_marginStart="20dp"
        android:layout_marginTop="55dp"
        android:hint="@string/descripcion"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/txt_descripcion"
        android:layout_width="178dp"
        android:layout_height="143dp"
        android:layout_below="@+id/txt_nombre"
        android:layout_marginStart="160dp"
        android:layout_marginTop="30dp"
        android:background="#CCCC"
        android:hint="@string/txt_descripcion"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:textSize="20sp" />


    <Button
        android:id="@+id/btn_grabar"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/txt_descripcion"
        android:layout_marginStart="100dp"
        android:layout_marginTop="60dp"
        android:background="#3437AE"
        android:hint="@string/button"
        android:textColor="@color/white"
        android:textSize="16sp" />



</RelativeLayout>